[package]
name = "turboplonk"
version = "0.1.0"
edition = "2024"
authors = ["Neo Sun <huachuang20@gmail.com>"]
readme = "README.md"
description = "App-specific TurboPlonK with various gadgets & primitives"
repository = "https://github.com/PostSiliconDev/turboplonk"
keywords = ["zkp", "plonk"]
license = "MIT/Apache-2.0"

[[bin]]
name = "gen-params"
path = "src/gen_params/setup.rs"
required-features = ["gen"]

[dependencies]
ark-ec = { version = "0.5", default-features = false }
ark-ff = { version = "0.5", default-features = false }
ark-poly = { version = "0.5", default-features = false }
ark-std = { version = "0.5", default-features = false }
ark-serialize = { version = "0.5", default-features = false, features = ["derive"] }
ark-bn254 = { version = "0.5", default-features = false, features = ["curve"] }
ark-ed-on-bn254 = { version = "0.5", default-features = false }
bincode = "2.0"
hex = "0.4"
itertools = "0.14"
lazy_static = "1.5"
num-bigint = "0.4"
num-integer = "0.1"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.10"
rayon = { version = "1.11", optional = true}
structopt =  { version = "0.3", optional = true}
tera = { version = "1.20", optional = true }

[dev-dependencies]
rand_core = { version = "0.6", features = ["getrandom"] }

[features]
default = []
std = [
  "ark-ec/std",
  "ark-std/std",
  "ark-ff/std",
  "ark-bn254/std"
]
parallel = [
  "rayon",
  "ark-std/parallel",
  "ark-ff/parallel",
  "ark-ec/parallel",
  "ark-poly/parallel"
]
debug = []
no_vk = []
no_srs = []
anemoi = []
lightweight = []
gen = [
  "parallel",
  "structopt",
  "tera"
]
